Downloads/smartsolutionteam-doc-ame-miniapp-components-7741382c0588/website/versioned_docs/version-2.1.8/ameIcon.md
---
id: version-2.1.8-ameIcon
title: AmeIcon
sidebar_label: 5.4 AmeIcon
original_id: ameIcon
---

Componente que exibe um Ícone.

## Exemplo

![ameicon](assets/images_components/v2.0.0/ameicon.png)

## Utilização

```xml
<AmeIcon icon={'ame-outline'}/>
<AmeIcon path={path_icon}/>
```

## Propriedades

### path

Path do icone a ser renderizado.

### icon

Nome do ícone a ser renderizado. Segue abaixo a lista de ícones:

- ![adress-outline](assets/icones/$icon-adress-outline.png) adress-outline
- ![adress-solid](assets/icones/$icon-adress-solid.png) adress-solid
- ![agenda-outline](assets/icones/$icon-agenda-outline.png) agenda-outline
- ![agenda-solid](assets/icones/$icon-agenda-solid.png) agenda-solid
- ![alert-outline](assets/icones/$icon-alert-outline.png) alert-outline
- ![alert-solid](assets/icones/$icon-alert-solid.png) alert-solid
- ![ame-banking](assets/icones/$icon-ame-banking.png) ame-banking
- ![ame-outline](assets/icones/$icon-ame-outline.png) ame-outline
- ![ame-solid](assets/icones/$icon-ame-solid.png) ame-solid
- ![attach](assets/icones/$icon-attach.png) attach
- ![bank-outline](assets/icones/$icon-bank-outline.png) bank-outline
- ![bank-solid](assets/icones/$icon-bank-solid.png) bank-solid
- ![bar-code](assets/icones/$icon-bar-code.png) bar-code
- ![barbecue-outline](assets/icones/$icon-barbecue-outline.png) barbecue-outline
- ![barbecue-solid](assets/icones/$icon-barbecue-solid.png) barbecue-solid
- ![bell-notification-outline](assets/icones/$icon-bell-notification-outline.png) bell-notification-outline
- ![bell-notification-solid](assets/icones/$icon-bell-notification-solid.png) bell-notification-solid
- ![bestcb](assets/icones/$icon-bestcb.png) bestcb
- ![bus-outline](assets/icones/$icon-bus-outline.png) bus-outline
- ![bus-solid](assets/icones/$icon-bus-solid.png) bus-solid
- ![calendar-outline](assets/icones/$icon-calendar-outline.png) calendar-outline
- ![calendar-solid](assets/icones/$icon-calendar-solid.png) calendar-solid
- ![camera-outline](assets/icones/$icon-camera-outline.png) camera-outline
- ![camera-solid](assets/icones/$icon-camera-solid.png) camera-solid
- ![card-ame-outline](assets/icones/$icon-card-ame-outline.png) card-ame-outline
- ![card-ame-solid](assets/icones/$icon-card-ame-solid.png) card-ame-solid
- ![cart-outline](assets/icones/$icon-cart-outline.png) cart-outline
- ![cart-solid](assets/icones/$icon-cart-solid.png) cart-solid
- ![cashback](assets/icones/$icon-cashback.png) cashback
- ![chat-mail-outline](assets/icones/$icon-chat-mail-outline.png) chat-mail-outline
- ![chat-mail-solid](assets/icones/$icon-chat-mail-solid.png) chat-mail-solid
- ![chat-message-outline](assets/icones/$icon-chat-message-outline.png) chat-message-outline
- ![chat-message-solid](assets/icones/$icon-chat-message-solid.png) chat-message-solid
- ![chat-sms-outline](assets/icones/$icon-chat-sms-outline.png) chat-sms-outline
- ![chat-sms-solid](assets/icones/$icon-chat-sms-solid.png) chat-sms-solid
- ![chat-whatsapp-outline](assets/icones/$icon-chat-whatsapp-outline.png) chat-whatsapp-outline
- ![chat-whatsapp-solid](assets/icones/$icon-chat-whatsapp-solid.png) chat-whatsapp-solid
- ![cinema-outline](assets/icones/$icon-cinema-outline.png) cinema-outline
- ![cinema-solid](assets/icones/$icon-cinema-solid.png) cinema-solid
- ![clock-outline](assets/icones/$icon-clock-outline.png) clock-outline
- ![clock-solid](assets/icones/$icon-clock-solid.png) clock-solid
- ![close](assets/icones/$icon-close.png) close
- ![clothing-tshirt-outline](assets/icones/$icon-clothing-tshirt-outline.png) clothing-tshirt-outline
- ![clothing-tshirt-solid](assets/icones/$icon-clothing-tshirt-solid.png) clothing-tshirt-solid
- ![colapse](assets/icones/$icon-colapse.png) colapse
- ![configuration-outline](assets/icones/$icon-configuration-outline.png) configuration-outline
- ![configuration-solid](assets/icones/$icon-configuration-solid.png) configuration-solid
- ![conversion](assets/icones/$icon-conversion.png) conversion
- ![copy-outline](assets/icones/$icon-copy-outline.png) copy-outline
- ![copy-solid](assets/icones/$icon-copy-solid.png) copy-solid
- ![credit-card-ame](assets/icones/$icon-credit-card-ame.png) credit-card-ame
- ![credit-card-outline](assets/icones/$icon-credit-card-outline.png) credit-card-outline
- ![credit-card-solid](assets/icones/$icon-credit-card-solid.png) credit-card-solid
- ![cupom-outline](assets/icones/$icon-cupom-outline.png) cupom-outline
- ![cupom-solid](assets/icones/$icon-cupom-solid.png) cupom-solid
- ![curiosities-outline](assets/icones/$icon-curiosities-outline.png) curiosities-outline
- ![curiosities-solid](assets/icones/$icon-curiosities-solid.png) curiosities-solid
- ![dashboard-outline](assets/icones/$icon-dashboard-outline.png) dashboard-outline
- ![dashboard-solid](assets/icones/$icon-dashboard-solid.png) dashboard-solid
- ![delivery-outline](assets/icones/$icon-delivery-outline.png) delivery-outline
- ![delivery-solid](assets/icones/$icon-delivery-solid.png) delivery-solid
- ![deposit-outline](assets/icones/$icon-deposit-outline.png) deposit-outline
- ![deposit-solid](assets/icones/$icon-deposit-solid.png) deposit-solid
- ![deslike-no-outline](assets/icones/$icon-deslike-no-outline.png) deslike-no-outline
- ![deslike-no-solid](assets/icones/$icon-deslike-no-solid.png) deslike-no-solid
- ![details](assets/icones/$icon-details.png) details
- ![diarista-outline](assets/icones/$icon-diarista-outline.png) diarista-outline
- ![diarista-solid](assets/icones/$icon-diarista-solid.png) diarista-solid
- ![divide](assets/icones/$icon-divide.png) divide
- ![documents-cpf](assets/icones/$icon-documents-cpf.png) documents-cpf
- ![documents-id-outline](assets/icones/$icon-documents-id-outline.png) documents-id-outline
- ![documents-id-solid](assets/icones/$icon-documents-id-solid.png) documents-id-solid
- ![donation-art](assets/icones/$icon-donation-art.png) donation-art
- ![donation-autonomous](assets/icones/$icon-donation-autonomous.png) donation-autonomous
- ![donation-communities](assets/icones/$icon-donation-communities.png) donation-communities
- ![donation-coronavirus](assets/icones/$icon-donation-coronavirus.png) donation-coronavirus
- ![donation-environement](assets/icones/$icon-donation-environement.png) donation-environement
- ![donation-fomezero](assets/icones/$icon-donation-fomezero.png) donation-fomezero
- ![donation-girlpower](assets/icones/$icon-donation-girlpower.png) donation-girlpower
- ![donation-healthcare](assets/icones/$icon-donation-healthcare.png) donation-healthcare
- ![donation-kids](assets/icones/$icon-donation-kids.png) donation-kids
- ![donation-planet](assets/icones/$icon-donation-planet.png) donation-planet
- ![donation-rainbow](assets/icones/$icon-donation-rainbow.png) donation-rainbow
- ![donation-sambarj](assets/icones/$icon-donation-sambarj.png) donation-sambarj
- ![donation-sambasalvador](assets/icones/$icon-donation-sambasalvador.png) donation-sambasalvador
- ![donation-sambasp](assets/icones/$icon-donation-sambasp.png) donation-sambasp
- ![donation-seniors](assets/icones/$icon-donation-seniors.png) donation-seniors
- ![donations-education](assets/icones/$icon-donations-education.png) donations-education
- ![donations](assets/icones/$icon-donations.png) donations
- ![down](assets/icones/$icon-down.png) down
- ![edit-outline](assets/icones/$icon-edit-outline.png) edit-outline
- ![edit-solid](assets/icones/$icon-edit-solid.png) edit-solid
- ![electrician](assets/icones/$icon-electrician.png) electrician
- ![emprestimo-loan-outline](assets/icones/$icon-emprestimo-loan-outline.png) emprestimo-loan-outline
- ![emprestimo-loan-solid](assets/icones/$icon-emprestimo-loan-solid.png) emprestimo-loan-solid
- ![emprestimopj-loan](assets/icones/$icon-emprestimopj-loan.png) emprestimopj-loan
- ![ensure](assets/icones/$icon-ensure.png) ensure
- ![equal](assets/icones/$icon-equal.png) equal
- ![events-outline](assets/icones/$icon-events-outline.png) events-outline
- ![events-solid](assets/icones/$icon-events-solid.png) events-solid
- ![expand](assets/icones/$icon-expand.png) expand
- ![extended-warranty](assets/icones/$icon-extended-warranty.png) extended-warranty
- ![extrato-outline](assets/icones/$icon-extrato-outline.png) extrato-outline
- ![extrato-solid](assets/icones/$icon-extrato-solid.png) extrato-solid
- ![eye-hide](assets/icones/$icon-eye-hide.png) eye-hide
- ![eye-show](assets/icones/$icon-eye-show.png) eye-show
- ![faces-et-outline](assets/icones/$icon-faces-et-outline.png) faces-et-outline
- ![faces-et-solid](assets/icones/$icon-faces-et-solid.png) faces-et-solid
- ![faces-happy-outline](assets/icones/$icon-faces-happy-outline.png) faces-happy-outline
- ![faces-happy-solid](assets/icones/$icon-faces-happy-solid.png) faces-happy-solid
- ![faces-normal-outline](assets/icones/$icon-faces-normal-outline.png) faces-normal-outline
- ![faces-normal-solid](assets/icones/$icon-faces-normal-solid.png) faces-normal-solid
- ![faces-sad-outline](assets/icones/$icon-faces-sad-outline.png) faces-sad-outline
- ![faces-sad-solid](assets/icones/$icon-faces-sad-solid.png) faces-sad-solid
- ![fav-outline](assets/icones/$icon-fav-outline.png) fav-outline
- ![fav-solid](assets/icones/$icon-fav-solid.png) fav-solid
- ![feature-bazar-outline](assets/icones/$icon-feature-bazar-outline.png) feature-bazar-outline
- ![feature-bazar-solid](assets/icones/$icon-feature-bazar-solid.png) feature-bazar-solid
- ![feature-bikeitau](assets/icones/$icon-feature-bikeitau.png) feature-bikeitau
- ![feature-br-petrobras](assets/icones/$icon-feature-br-petrobras.png) feature-br-petrobras
- ![feature-cabify](assets/icones/$icon-feature-cabify.png) feature-cabify
- ![feature-caixa](assets/icones/$icon-feature-caixa.png) feature-caixa
- ![feature-carimbo](assets/icones/$icon-feature-carimbo.png) feature-carimbo
- ![feature-drconsulta](assets/icones/$icon-feature-drconsulta.png) feature-drconsulta
- ![feature-gamerzone](assets/icones/$icon-feature-gamerzone.png) feature-gamerzone
- ![feature-lavanderia](assets/icones/$icon-feature-lavanderia.png) feature-lavanderia
- ![feature-mobile-plan](assets/icones/$icon-feature-mobile-plan.png) feature-mobile-plan
- ![feature-news](assets/icones/$icon-feature-news.png) feature-news
- ![feature-pix](assets/icones/$icon-feature-pix.png) feature-pix
- ![feature-scanandgo](assets/icones/$icon-feature-scanandgo.png) feature-scanandgo
- ![feature-shell-box](assets/icones/$icon-feature-shell-box.png) feature-shell-box
- ![feature-spotfy](assets/icones/$icon-feature-spotfy.png) feature-spotfy
- ![feature-taggy](assets/icones/$icon-feature-taggy.png) feature-taggy
- ![feature-telemedicin](assets/icones/$icon-feature-telemedicin.png) feature-telemedicin
- ![feature-uber](assets/icones/$icon-feature-uber.png) feature-uber
- ![feature-ultragaz](assets/icones/$icon-feature-ultragaz.png) feature-ultragaz
- ![feature-vakinha](assets/icones/$icon-feature-vakinha.png) feature-vakinha
- ![feature-voucher-future](assets/icones/$icon-feature-voucher-future.png) feature-voucher-future
- ![feature-wdental](assets/icones/$icon-feature-wdental.png) feature-wdental
- ![feedback-error](assets/icones/$icon-feedback-error.png) feedback-error
- ![feedback-success](assets/icones/$icon-feedback-success.png) feedback-success
- ![filter-outline](assets/icones/$icon-filter-outline.png) filter-outline
- ![filter-solid](assets/icones/$icon-filter-solid.png) filter-solid
- ![flash-active](assets/icones/$icon-flash-active.png) flash-active
- ![flash-disabled](assets/icones/$icon-flash-disabled.png) flash-disabled
- ![food-convenience](assets/icones/$icon-food-convenience.png) food-convenience
- ![games-outline](assets/icones/$icon-games-outline.png) games-outline
- ![games-solid](assets/icones/$icon-games-solid.png) games-solid
- ![general-services-outline](assets/icones/$icon-general-services-outline.png) general-services-outline
- ![general-services-solid](assets/icones/$icon-general-services-solid.png) general-services-solid
- ![gift-card-outline](assets/icones/$icon-gift-card-outline.png) gift-card-outline
- ![gift-card-solid](assets/icones/$icon-gift-card-solid.png) gift-card-solid
- ![gift-outline](assets/icones/$icon-gift-outline.png) gift-outline
- ![gift-solid](assets/icones/$icon-gift-solid.png) gift-solid
- ![gym-outline](assets/icones/$icon-gym-outline.png) gym-outline
- ![gym-solid](assets/icones/$icon-gym-solid.png) gym-solid
- ![hand-easy](assets/icones/$icon-hand-easy.png) hand-easy
- ![hands](assets/icones/$icon-hands.png) hands
- ![health-outline](assets/icones/$icon-health-outline.png) health-outline
- ![health-solid](assets/icones/$icon-health-solid.png) health-solid
- ![help-outline](assets/icones/$icon-help-outline.png) help-outline
- ![help-solid](assets/icones/$icon-help-solid.png) help-solid
- ![home-outline](assets/icones/$icon-home-outline.png) home-outline
- ![home-solid](assets/icones/$icon-home-solid.png) home-solid
- ![house](assets/icones/$icon-house.png) house
- ![image-album-outline](assets/icones/$icon-image-album-outline.png) image-album-outline
- ![image-album-solid](assets/icones/$icon-image-album-solid.png) image-album-solid
- ![image-outline](assets/icones/$icon-image-outline.png) image-outline
- ![image-solid](assets/icones/$icon-image-solid.png) image-solid
- ![insurances](assets/icones/$icon-insurances.png) insurances
- ![Interface](assets/icones/$icon-Interface.png) Interface
- ![investments](assets/icones/$icon-investments.png) investments
- ![keyboard-numbers-outline](assets/icones/$icon-keyboard-numbers-outline.png) keyboard-numbers-outline
- ![keyboard-numbers-solid](assets/icones/$icon-keyboard-numbers-solid.png) keyboard-numbers-solid
- ![lamp-outline](assets/icones/$icon-lamp-outline.png) lamp-outline
- ![lamp-solid](assets/icones/$icon-lamp-solid.png) lamp-solid
- ![lazer-recreation-outline](assets/icones/$icon-lazer-recreation-outline.png) lazer-recreation-outline
- ![lazer-recreation-solid](assets/icones/$icon-lazer-recreation-solid.png) lazer-recreation-solid
- ![left-previous](assets/icones/$icon-left-previous.png) left-previous
- ![like-ok-outline](assets/icones/$icon-like-ok-outline.png) like-ok-outline
- ![like-ok-solid](assets/icones/$icon-like-ok-solid.png) like-ok-solid
- ![list-items-outline](assets/icones/$icon-list-items-outline.png) list-items-outline
- ![list-items-solid](assets/icones/$icon-list-items-solid.png) list-items-solid
- ![loan-consignado](assets/icones/$icon-loan-consignado.png) loan-consignado
- ![location-outline](assets/icones/$icon-location-outline.png) location-outline
- ![location-solid](assets/icones/$icon-location-solid.png) location-solid
- ![logo-autentic](assets/icones/$icon-logo-autentic.png) logo-autentic
- ![map-outline](assets/icones/$icon-map-outline.png) map-outline
- ![map-solid](assets/icones/$icon-map-solid.png) map-solid
- ![market-bag-outline](assets/icones/$icon-market-bag-outline.png) market-bag-outline
- ![market-bag-solid](assets/icones/$icon-market-bag-solid.png) market-bag-solid
- ![mini-games](assets/icones/$icon-mini-games.png) mini-games
- ![mirror-beuty-outline](assets/icones/$icon-mirror-beuty-outline.png) mirror-beuty-outline
- ![mirror-beuty-solid](assets/icones/$icon-mirror-beuty-solid.png) mirror-beuty-solid
- ![mobile-chip](assets/icones/$icon-mobile-chip.png) mobile-chip
- ![mobile-outline](assets/icones/$icon-mobile-outline.png) mobile-outline
- ![mobile-solid](assets/icones/$icon-mobile-solid.png) mobile-solid
- ![money-balance](assets/icones/$icon-money-balance.png) money-balance
- ![money-card-outline](assets/icones/$icon-money-card-outline.png) money-card-outline
- ![money-card-solid](assets/icones/$icon-money-card-solid.png) money-card-solid
- ![money-outline](assets/icones/$icon-money-outline.png) money-outline
- ![money-solid](assets/icones/$icon-money-solid.png) money-solid
- ![montador-outline](assets/icones/$icon-montador-outline.png) montador-outline
- ![montador-solid](assets/icones/$icon-montador-solid.png) montador-solid
- ![movimentar-extrato-statement](assets/icones/$icon-movimentar-extrato-statement.png) movimentar-extrato-statement
- ![multiply](assets/icones/$icon-multiply.png) multiply
- ![new-card-segunda-via](assets/icones/$icon-new-card-segunda-via.png) new-card-segunda-via
- ![newness-outline](assets/icones/$icon-newness-outline.png) newness-outline
- ![newness-solid](assets/icones/$icon-newness-solid.png) newness-solid
- ![padlock-lock-outline](assets/icones/$icon-padlock-lock-outline.png) padlock-lock-outline
- ![padlock-lock-solid](assets/icones/$icon-padlock-lock-solid.png) padlock-lock-solid
- ![padlock-open-outline](assets/icones/$icon-padlock-open-outline.png) padlock-open-outline
- ![padlock-open-solid](assets/icones/$icon-padlock-open-solid.png) padlock-open-solid
- ![parking-outline](assets/icones/$icon-parking-outline.png) parking-outline
- ![parking-solid](assets/icones/$icon-parking-solid.png) parking-solid
- ![pet-m-outline](assets/icones/$icon-pet-m-outline.png) pet-m-outline
- ![pet-m-solid](assets/icones/$icon-pet-m-solid.png) pet-m-solid
- ![pet-p-outline](assets/icones/$icon-pet-p-outline.png) pet-p-outline
- ![pet-p-solid](assets/icones/$icon-pet-p-solid.png) pet-p-solid
- ![pet-xl-outline](assets/icones/$icon-pet-xl-outline.png) pet-xl-outline
- ![pet-xl-solid](assets/icones/$icon-pet-xl-solid.png) pet-xl-solid
- ![pets-outline](assets/icones/$icon-pets-outline.png) pets-outline
- ![pets-solid](assets/icones/$icon-pets-solid.png) pets-solid
- ![phone-outline](assets/icones/$icon-phone-outline.png) phone-outline
- ![phone-solid](assets/icones/$icon-phone-solid.png) phone-solid
- ![plumber-outline](assets/icones/$icon-plumber-outline.png) plumber-outline
- ![plumber-solid](assets/icones/$icon-plumber-solid.png) plumber-solid
- ![poup-pig](assets/icones/$icon-poup-pig.png) poup-pig
- ![pricing-outline](assets/icones/$icon-pricing-outline.png) pricing-outline
- ![pricing-solid](assets/icones/$icon-pricing-solid.png) pricing-solid
- ![privacy-policy](assets/icones/$icon-privacy-policy.png) privacy-policy
- ![profile-outline](assets/icones/$icon-profile-outline.png) profile-outline
- ![profile-solid](assets/icones/$icon-profile-solid.png) profile-solid
- ![qrcode](assets/icones/$icon-qrcode.png) qrcode
- ![receipt-outline](assets/icones/$icon-receipt-outline.png) receipt-outline
- ![receipt-solid](assets/icones/$icon-receipt-solid.png) receipt-solid
- ![recieve](assets/icones/$icon-recieve.png) recieve
- ![restaurant-outline](assets/icones/$icon-restaurant-outline.png) restaurant-outline
- ![restaurant-solid](assets/icones/$icon-restaurant-solid.png) restaurant-solid
- ![right-next](assets/icones/$icon-right-next.png) right-next
- ![scissor-cut-outline](assets/icones/$icon-scissor-cut-outline.png) scissor-cut-outline
- ![scissor-cut-solid](assets/icones/$icon-scissor-cut-solid.png) scissor-cut-solid
- ![search](assets/icones/$icon-search.png) search
- ![selfie-outline](assets/icones/$icon-selfie-outline.png) selfie-outline
- ![selfie-solid](assets/icones/$icon-selfie-solid.png) selfie-solid
- ![send-money](assets/icones/$icon-send-money.png) send-money
- ![send-outline](assets/icones/$icon-send-outline.png) send-outline
- ![send-solid](assets/icones/$icon-send-solid.png) send-solid
- ![serralheiro-outline](assets/icones/$icon-serralheiro-outline.png) serralheiro-outline
- ![serralheiro-solid](assets/icones/$icon-serralheiro-solid.png) serralheiro-solid
- ![services-outline](assets/icones/$icon-services-outline.png) services-outline
- ![services-solid](assets/icones/$icon-services-solid.png) services-solid
- ![share-outline](assets/icones/$icon-share-outline.png) share-outline
- ![share-solid](assets/icones/$icon-share-solid.png) share-solid
- ![store-outline](assets/icones/$icon-store-outline.png) store-outline
- ![store-solid](assets/icones/$icon-store-solid.png) store-solid
- ![subtract](assets/icones/$icon-subtract.png) subtract
- ![sum](assets/icones/$icon-sum.png) sum
- ![taxes](assets/icones/$icon-taxes.png) taxes
- ![tech-outline](assets/icones/$icon-tech-outline.png) tech-outline
- ![tech-solid](assets/icones/$icon-tech-solid.png) tech-solid
- ![tecnico-Informatica-outline](assets/icones/$icon-tecnico-Informatica-outline.png) tecnico-Informatica-outline
- ![tecnico-Informatica-solid](assets/icones/$icon-tecnico-Informatica-solid.png) tecnico-Informatica-solid
- ![teste-covid](assets/icones/$icon-teste-covid.png) teste-covid
- ![thief](assets/icones/$icon-thief.png) thief
- ![ticket-outline](assets/icones/$icon-ticket-outline.png) ticket-outline
- ![ticket-solid](assets/icones/$icon-ticket-solid.png) ticket-solid
- ![tickets-outline](assets/icones/$icon-tickets-outline.png) tickets-outline
- ![tickets-solid](assets/icones/$icon-tickets-solid.png) tickets-solid
- ![tools-outline](assets/icones/$icon-tools-outline.png) tools-outline
- ![tools-solid](assets/icones/$icon-tools-solid.png) tools-solid
- ![transactions-outline](assets/icones/$icon-transactions-outline.png) transactions-outline
- ![transactions-solid](assets/icones/$icon-transactions-solid.png) transactions-solid
- ![transfer-outline](assets/icones/$icon-transfer-outline.png) transfer-outline
- ![transfer-solid](assets/icones/$icon-transfer-solid.png) transfer-solid
- ![transport-card](assets/icones/$icon-transport-card.png) transport-card
- ![transports](assets/icones/$icon-transports.png) transports
- ![trash-outline](assets/icones/$icon-trash-outline.png) trash-outline
- ![trash-solid](assets/icones/$icon-trash-solid.png) trash-solid
- ![trip-plane](assets/icones/$icon-trip-plane.png) trip-plane
- ![turn-camera-outline](assets/icones/$icon-turn-camera-outline.png) turn-camera-outline
- ![turn-camera-solid](assets/icones/$icon-turn-camera-solid.png) turn-camera-solid
- ![up](assets/icones/$icon-up.png) up
- ![valueqr](assets/icones/$icon-valueqr.png) valueqr
- ![wallet-outline](assets/icones/$icon-wallet-outline.png) wallet-outline
- ![wallet-solid](assets/icones/$icon-wallet-solid.png) wallet-solid
- ![withdraw-retirar-outline](assets/icones/$icon-withdraw-retirar-outline.png) withdraw-retirar-outline
- ![withdraw-retirar-solid](assets/icones/$icon-withdraw-retirar-solid.png) withdraw-retirar-solid
- ![work-outline](assets/icones/$icon-work-outline.png) work-outline
- ![work-solid](assets/icones/$icon-work-solid.png) work-solid
